fix buttons on ios

--- a/src/components/MotionCards/_motion-cards.scss
+++ b/src/components/MotionCards/_motion-cards.scss
@@ -117,10 +117,13 @@ $timing-fn: cubic-bezier(0.45, 0.05, 0.55, 0.95);
 }
 
 .tco-motion-control {
-  z-index: 99;
-  display: flex;
+  position: relative;
+  top: 0;
+  right: 0;
+  display: block;
   width: 24px;
   height: 24px;
+  padding: 0;
   border-radius: 50%;
   background-color: $color-classic-navy;
 
@@ -145,9 +148,11 @@ $timing-fn: cubic-bezier(0.45, 0.05, 0.55, 0.95);
 }
 
 .tco-motion-control-icon {
+  position: absolute;
+  top: 6px;
+  left: 6px;
   width: 12px;
   height: 12px;
-  margin: auto;
   fill: $color-foreground-on-tint;
 }
 
